@@ -1,5 +1,6 @@
 package com.quizapp.quizApp.service.impl;
 
+import com.quizapp.quizApp.exception.QuizNotFoundException;
 import com.quizapp.quizApp.model.beans.Answer;
 import com.quizapp.quizApp.model.beans.Question;
 import com.quizapp.quizApp.model.beans.Quiz;
@@ -7,10 +8,12 @@ import com.quizapp.quizApp.model.dto.QuestionDTO;
 import com.quizapp.quizApp.repository.QuestionRepository;
 import com.quizapp.quizApp.repository.QuizRepository;
 import com.quizapp.quizApp.service.interfac.QuestionService;
+import jakarta.validation.constraints.Null;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -61,13 +64,15 @@ public class QuestionServiceImpl implements QuestionService {
     }
 
     @Override
-    public QuestionDTO createQuestion(QuestionDTO questionDTO) {
+    public QuestionDTO createQuestion(QuestionDTO questionDTO) { // OK
         System.out.println("Received QuestionDTO: {}" + questionDTO);
 
-        // Vérifie si l'ID du quiz est valide
-        if (!quizRepository.existsById(questionDTO.getQuizId())) {
-            throw new IllegalArgumentException("L'ID du quiz spécifié est invalide ou introuvable.");
-        }
+        // recuperation du quiz
+        Quiz quiz = quizRepository.findById(questionDTO.getQuizId())
+                .orElseThrow(() -> new QuizNotFoundException("Quiz non trouvé avec l'ID : " + questionDTO.getQuizId()));
+
+
+
         System.out.println("Quiz ID is valid: {}" + questionDTO.getQuizId());
 
         // Vérifie si une question avec le même libellé existe déjà dans le quiz
@@ -80,7 +85,15 @@ public class QuestionServiceImpl implements QuestionService {
         System.out.println("Mapped Question entity: {}" +  question);
 
         question.setIsActive(false); // Par défaut
-        question.setPosition(null); // Par défaut
+
+
+        // Determine the next position for the new question
+        int nextPosition = quiz.getQuestions().stream()
+                .mapToInt(q -> q.getPosition() != null ? q.getPosition() : 0)
+                .max()
+                .orElse(0) + 1;
+
+        question.setPosition(nextPosition);
 
         // Ajouter les réponses si présentes
         if (questionDTO.getAnswers() != null && !questionDTO.getAnswers().isEmpty()) {
@@ -108,6 +121,20 @@ public class QuestionServiceImpl implements QuestionService {
         Question savedQuestion = questionRepository.save(question);
         System.out.println("Saved Question entity: {}" + savedQuestion);
 
+
+        Quiz quiz2 = quizRepository.findById(questionDTO.getQuizId())
+                .orElseThrow(() -> new QuizNotFoundException("Quiz non trouvé avec l'ID : " + questionDTO.getQuizId()));
+
+        /* Pour tester si la liste des questions respectent bien toujours les positions
+        List<Question> listQ = quiz2.getQuestions();
+
+
+        // Parcours et affichage des labels des questions
+        for (Question quest: listQ) {
+            System.out.println("Label de la question : " + quest.getLabel());
+        }
+        */
+
         return modelMapper.map(savedQuestion, QuestionDTO.class);
     }
 
@@ -125,10 +152,10 @@ public class QuestionServiceImpl implements QuestionService {
             throw new IllegalArgumentException("Une question avec le même libellé existe déjà dans ce quiz.");
         }
 
-        // Vérifie si la position demandée est cohérente
+        // Vérifie si la position demandée est cohérente et faire la permutation
         if (questionDTO.getPosition() != null) {
-            validatePositionChange(existingQuestion.getQuiz().getId(), questionDTO.getPosition());
-            reorderQuestionsAfterPositionChange(existingQuestion, questionDTO.getPosition());
+            validatePositionChange(existingQuestion,existingQuestion.getQuiz().getId(), questionDTO.getPosition());
+            permutePosition(existingQuestion, questionDTO.getPosition());
         }
 
         // Mappage des champs uniquement s'ils sont fournis
@@ -153,6 +180,9 @@ public class QuestionServiceImpl implements QuestionService {
                 .orElseThrow(() -> new IllegalArgumentException("Question introuvable"));
         UUID quizId = question.getQuiz().getId();
         questionRepository.deleteById(id);
+        Quiz quiz = question.getQuiz();
+        System.out.println("Après sppression de question : " +  id);
+        quiz.printListQuesions();
         reorderQuestions(quizId); // Réorganiser après suppression
     }
 
@@ -161,14 +191,6 @@ public class QuestionServiceImpl implements QuestionService {
         Question question = questionRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Question introuvable"));
 
-        // Validation avant activation
-        validateQuestionActivation(question);
-
-        if (question.getPosition() == null) {
-            List<Question> activeQuestions = questionRepository.findAllByQuizIdAndIsActiveTrueOrderByPosition(
-                    question.getQuiz().getId());
-            question.setPosition(activeQuestions.size() + 1); // Ajoute à la fin
-        }
         question.setIsActive(true);
         questionRepository.save(question);
     }
@@ -178,69 +200,56 @@ public class QuestionServiceImpl implements QuestionService {
         Question question = questionRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Question introuvable"));
         question.setIsActive(false);
-        question.setPosition(null); // Annule la position
         questionRepository.save(question);
-        reorderQuestions(question.getQuiz().getId()); // Réorganiser après désactivation
     }
 
 
     private void reorderQuestions(UUID quizId) {
-        List<Question> activeQuestions = questionRepository.findAllByQuizIdAndIsActiveTrueOrderByPosition(quizId);
+        List<Question> activeQuestions = questionRepository.findAllByQuizIdOrderByPosition(quizId);
         for (int i = 0; i < activeQuestions.size(); i++) {
             activeQuestions.get(i).setPosition(i + 1); // Réordonne à partir de 1
         }
         questionRepository.saveAll(activeQuestions);
     }
 
-    private void validatePositionChange(UUID quizId, Integer newPosition) {
+    /*
+    Verifie si la position est valide : 1<= position <= size(list_question)
+    */
+    private void validatePositionChange(Question existingQuestion,UUID quizId, Integer newPosition) {
         if (newPosition == null) {
             throw new IllegalArgumentException("La position ne peut pas être nulle.");
         }
-
         // Récupérer toutes les questions actives triées par position
-        List<Question> activeQuestions = questionRepository.findAllByQuizIdAndIsActiveTrueOrderByPosition(quizId);
+        List<Question> listQuestions = questionRepository.findAllByQuizId(quizId);
 
         // Vérifie que la position demandée est dans la plage valide
-        if (newPosition < 1 || newPosition > activeQuestions.size()) {
-            throw new IllegalArgumentException("La position demandée est incohérente avec l'ordre actuel des questions actives.");
+        if (newPosition < 1 || newPosition > listQuestions.size()) {
+            throw new IllegalArgumentException("La position demandée est invalide.");
         }
-
-        // Vérifie que la nouvelle position ne casse pas la continuité logique
-        for (int i = 0; i < activeQuestions.size(); i++) {
-            int expectedPosition = i + 1; // Les positions doivent être séquentielles
-            if (activeQuestions.get(i).getPosition() != expectedPosition && expectedPosition != newPosition) {
-                throw new IllegalArgumentException("La modification de la position casse l'ordre séquentiel des questions actives.");
-            }
+        if (existingQuestion.getPosition().equals(newPosition)){
+            throw new IllegalArgumentException("La position demandée est déjà affecté au question.");
         }
     }
 
-    private void reorderQuestionsAfterPositionChange(Question question, Integer newPosition) {
+    private void permutePosition(Question question, Integer newPosition) {
         if (newPosition == null) {
             throw new IllegalArgumentException("La position ne peut pas être nulle.");
         }
 
-        // Récupérer toutes les questions actives triées par position
-        List<Question> activeQuestions = questionRepository.findAllByQuizIdAndIsActiveTrueOrderByPosition(question.getQuiz().getId());
+        Question questAPermuter = questionRepository.findQuestionByQuizIdAndPosition(question.getQuiz().getId(),newPosition);
 
-        // Retirer temporairement la question modifiée de la liste
-        activeQuestions.removeIf(q -> q.getId().equals(question.getId()));
-
-        // Insérer la question modifiée à la nouvelle position
-        activeQuestions.add(newPosition - 1, question);
-
-        // Réattribuer les positions séquentielles
-        for (int i = 0; i < activeQuestions.size(); i++) {
-            activeQuestions.get(i).setPosition(i + 1);
-        }
+        questAPermuter.setPosition(question.getPosition());
+        question.setPosition(newPosition);
 
         // Sauvegarder les questions réorganisées
-        questionRepository.saveAll(activeQuestions);
+        questionRepository.save(questAPermuter);
+        questionRepository.save(question);
     }
 
     private void validateQuestionActivation(Question question) {
         List<Answer> activeAnswers = question.getAnswers().stream()
                 .filter(Answer::getIsActive) // Filtrer uniquement les réponses actives
-                .collect(Collectors.toList());
+                .toList();
 
         if (activeAnswers.size() < 2) {
             throw new IllegalArgumentException("Une question doit avoir au moins deux réponses actives pour être activée.");
